--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -1,6 +1,6 @@
 <div class="sub_nav most_review_sub">
-  <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
-  <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
+  <!-- <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
+  <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button> -->
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <li class="coumos1"><a class="active" href="/deals/quick_search">Amazon Deal Finder</a></li>
@@ -19,32 +19,23 @@
       </ul>
     </div>
     
-    <div class="gnb_m">
-
+    <!-- <div class="gnb_m">
       <ul class="clearfix">
         <p>MENU</p>
         <li class="top_menu"><a href="/deals/quick_search">ALL ABOUT AMAZON</a></li>
         <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
-        <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DISCOVERY,</a></li>
-        <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
         <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY,</a></li>
         <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
-        <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
-        <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
-        <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
-        <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="/storepromotions">FEATURED DISCOUNTS</a></li>
         <li><a href="/storepromotions">TODAY'S DISCOVERY</a></li>
         <li><a href="/deals/store_sales">SALE & CLEARANCE,</a></li>
         <li><a href="/deals/store_coupons">COUPONS & PROMOTIONS,</a></li>
         <li><a href="/deals/store_dealoftheday">DEAL OF THE DAY,</a></li>
         <li><a href="/deals/store_weeklyad">WEEKLY AD</a></li>
-        <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
-    <div class="gnb_kbg"></div>
+    <div class="gnb_kbg"></div> -->
 </div>
