--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
 
-
+  <%= render 'shared/new_header' %>
   <%= yield %> 
   <%= render 'shared/footer2' %> 
   <%= javascript_include_tag 'application' %>
