--- a/app/views/promocodes/index.html.erb
+++ b/app/views/promocodes/index.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/play_video' %><!-- for play youtube video-->
 <div class="layout"><!--layout-->
   <div class="wrap">  
-    <%= render 'shared/header_short' %>
     <%= render 'shared/header_amazon' %>
     <%= render 'shared/hotpro_header' %>
+    <%= render 'shared/botton_amz' %>
     
     <div class="more_search"><%= form_for "",url: promocodes_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></div>
 
