--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -1,6 +1,6 @@
 <div class="sub_nav hotdeals_nav hotdeals_show">
-  <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
-  <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
+  <!-- <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
+  <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button> -->
     <div class="sub_nav_pc">
       <ul class="clearfix">
        <li><a href="/deals/quick_search">Amazon Deal Finder</a></li>
@@ -19,29 +19,21 @@
       </ul>
     </div>
     
-    <div class="gnb_m">
+    <!-- <div class="gnb_m">
       <ul class="clearfix">
        <p>MENU</p>
        <li class="top_menu"><a href="/deals/bestdeals">ALL ABOUT AMAZON</a></li>
        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
        <li><a href="/deals/bestdeals">TODAY'S DISCOVERY,</a></li>
-       <!-- <li><a href="/hotdeals">Deals</a></li> -->
-       <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
        <li><a href="/promocodes">COUPON CODES,</a></li>
        <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY,</a></li>
-        <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
-       <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
-       <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
-       <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
-       <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-       <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
+       <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
        <li class="top_menu"><a href="/storepromotions">FEATURED DISCOUNTS</a></li>
        <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
-       <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
        <li class="new_code"><% if can? :update, @promocodes %><%= link_to 'New Code', new_promocode_path %><% end %></li>
        <li class="new_deal"><% if can? :update, @hotdeals %><%= link_to 'New Bargain', new_hotdeal_path %><% end %></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
-    <div class="gnb_kbg"></div>
+    <div class="gnb_kbg"></div> -->
 </div>
