--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -720,16 +720,17 @@ a.set_reset_m{display:none;}
   
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .set_banner{height:566.94px;}
+  .set_banner{display:none;height:566.94px;}
   .set_banner h2{font-size:17px;}
   .field span.label{width:33%;}
   .field input, .field select{width:64%;}
   .set_search{width:102%;}
-  .set_search_box{padding:10px;}
+  .set_search_box{float:none;width:100%;margin:0 0 20px 0;}
   .set_search_box button.accordion{width:50%;}
   .option_box p{font-size:12px;}
   .text-center{padding-top:0;}
   .set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:0;}
+  .set_b_m{display:block;margin-top:20px;float:none;width:100%;}
 }
 
 
@@ -749,6 +750,7 @@ a.set_reset_m{display:none;}
 .header_hr{margin:0;} 
 
 @media screen and (max-width:640px){
+  .new_container nav ul{padding:0;margin:0;}
   .new_container .logo a img.oh_logo_big{height:25px;}
   .new_container .logo{}
   .new_container .nav-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;background:#fff;opacity:0;transition:all 0.2s ease;}
@@ -775,6 +777,7 @@ a.set_reset_m{display:none;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
+  .new_container nav ul{padding:0;margin:0;}
   .new_container .logo a img.oh_logo_big{height:30px;}
   .new_container .logo{}
   .new_container .nav-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;background:#fff;opacity:0;transition:all 0.2s ease;}
