--- a/app/views/recommends/_navbar.html.erb
+++ b/app/views/recommends/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="featured">
 
-  <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="모바일 메뉴 열기" /></button>
+  <!-- <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="모바일 메뉴 열기" /></button> -->
   <div class="sm_pc">
    <div class="filter-search guide_controll">
       <li><button class="filter-button btn btn-md btn-primary top_10" data-filter="*">All</button></li>
@@ -13,7 +13,7 @@
     </div>
   </div>
   
-  <div class="sm_mobile">
+  <!-- <div class="sm_mobile">
     <div class="filter-search guide_controll">
       <p>Categories</p>
       <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All</button></li>
@@ -22,10 +22,9 @@
       <li><button class="filter-button btn btn-md white-text" data-filter="fashion">Fashion</button></li>
       <li><button class="filter-button btn btn-md white-text" data-filter="travel">Travel</button></li>
       <li><button class="filter-button btn btn-md" data-filter="home&kitchen">Home&Kitchen</button></li>
-      <!-- <input type="text" class="form-control" placeholder="Search gift you want to"> -->
       </div>
     <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
-  </div>
+  </div> -->
 
 </div><!--./featured-->
 <div class="gnb_kbg"></div>
