--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -4,7 +4,8 @@
   <div class="wrap">
     
     <%= render 'shared/header_amazon' %>
-    <%= render 'deals/navbar_codes' %>    
+    <%= render 'deals/navbar_codes' %> 
+    <%= render 'shared/botton_amz' %>   
 
     <div class="codes common_layout">
       <div class="lt_cnt note_pc">
