--- a/app/views/deals/store_dealoftheday.html.erb
+++ b/app/views/deals/store_dealoftheday.html.erb
@@ -4,7 +4,7 @@
     <%= render 'deals/header_store' %>
     <%= render 'shared/botton_store' %>
 
-    <div class="store_pin clearfix"><p>Deal Of The Day</p></div>
+    <div class="store_pin clearfix"><span><span>Deal Of The Day</span></span></div>
     <div class="store_wrap">
       
       <!-- <div class="store_top clearfix">
