--- a/app/views/deals/store_coupons.html.erb
+++ b/app/views/deals/store_coupons.html.erb
@@ -4,7 +4,7 @@
     <%= render 'deals/header_store' %>
     <%= render 'shared/botton_store' %>
 
-    <div class="store_pin clearfix"><p>Coupons & Promotions</p></div>
+    <div class="store_pin clearfix"><span><span>Coupons & Promotions</span></span></div>
     <div class="store_wrap">
       
       <!-- <div class="store_top clearfix">
