--- a/app/views/deals/store_weeklyad.html.erb
+++ b/app/views/deals/store_weeklyad.html.erb
@@ -4,7 +4,7 @@
     <%= render 'deals/header_store' %>
     <%= render 'shared/botton_store' %>
 
-    <div class="store_pin clearfix"><p>Weekly AD</p></div>
+    <div class="store_pin clearfix"><span><span>Weekly AD</span></span></div>
     <div class="store_wrap">
       
       <!-- <div class="store_top clearfix">
