--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -4,6 +4,8 @@
     <div class="wrap">
     <%= render 'shared/header_amazon' %>  
     <%= render 'shared/hotpro_header' %>
+    <%= render 'shared/botton_amz' %>
+    
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
