--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -5,6 +5,7 @@
     <div class="wrap">
     <%= render 'shared/header_amazon' %>  
     <%= render 'shared/hotpro_header' %>
+    <%= render 'shared/botton_amz' %>
     
       <div class="show_box translate_box clearfix">
         
