--- a/app/views/bargains/show.html.erb
+++ b/app/views/bargains/show.html.erb
@@ -1,13 +1,13 @@
-<p id="notice"><%= notice %></p>
+
 
 <p>
   <strong>Title:</strong>
-  <%= @bargain.title %>
+  <%= @bargain.bar_title %>
 </p>
 
 <p>
   <strong>Body:</strong>
-  <%= @bargain.body %>
+  <%= @bargain.bar_detail %>
 </p>
 
 <p>
