--- a/app/views/bargains/_form.html.erb
+++ b/app/views/bargains/_form.html.erb
@@ -4,9 +4,11 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :body %>
     <%= f.association :barcategory %>
+    <%= f.input :bar_image %>
+    <%= f.input :bar_title %>
+    <%= f.input :bar_detail %>
+    <%= f.input :bar_link %>
   </div>
 
   <div class="form-actions">
