--- a/app/views/deals/_navbar_deals.html.erb
+++ b/app/views/deals/_navbar_deals.html.erb
@@ -5,6 +5,7 @@
       <ul class="clearfix">
         <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
+        <!-- <li><a href="/bargains">Featured Deals</a></li> -->
         <li>
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
