--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -5,6 +5,7 @@
       <ul class="clearfix">
         <li class="coumos1"><a class="active" href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
+        <!-- <li><a href="/bargains">Featured Deals</a></li> -->
         <li><a href="/deals/bestdeals">Today's Discovery</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
         <!-- <li><a href="/deals/promo_codes">Coupon Codes</a></li> -->
