--- a/app/views/deals/_navbar_codes.html.erb
+++ b/app/views/deals/_navbar_codes.html.erb
@@ -4,6 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+        <!-- <li><a href="/bargains">Featured Deals</a></li> -->
         <li>
           <a class="active" href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
