--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -28,23 +28,25 @@
     </div>
 
 
-    <div class="pct_box clearfix">
+    <div class="pct_box  clearfix">
       <div class="minpct pct">
         <p>Min Pct Off</p>
-        <select name="minpct">
-          <!-- <option value="">Min Pct Off</option> -->
-          <option value="0">0%</option>
-          <option value="5">5%</option>
-          <option value="10">10%</option>
-          <option value="20">20%</option>
-          <option value="30">30%</option>
-          <option value="40">40%</option>
-          <option value="50">50%</option>
-          <option value="60">60%</option>
-          <option value="70">70%</option>
-          <option value="80">80%</option>
-          <option value="90">90%</option>
-        </select>
+        <div class="select_pct">
+          <select name="minpct">
+            <!-- <option value="">Min Pct Off</option> -->
+            <option value="0">0%</option>
+            <option value="5">5%</option>
+            <option value="10">10%</option>
+            <option value="20">20%</option>
+            <option value="30">30%</option>
+            <option value="40">40%</option>
+            <option value="50">50%</option>
+            <option value="60">60%</option>
+            <option value="70">70%</option>
+            <option value="80">80%</option>
+            <option value="90">90%</option>
+          </select>
+        </div>
       </div>
 
       <div class="maxpct pct">
