--- a/app/views/shared/_botton_amz.html.erb
+++ b/app/views/shared/_botton_amz.html.erb
@@ -1,6 +1,8 @@
 <div class="botton_m clearfix">
   <a href="/deals/quick_search"><img src="<%=asset_path 'ui_finder.png' %>" alt="Amazon Deal Finder" /></a>
-  <!-- <a href="/bargains"><img src="<%=asset_path 'ui_featured.png' %>" alt="Amazon Featured Deals" /></a> -->
+  <% if can? :update, @storepromotion %>
+  <a href="/bargains"><img src="<%=asset_path 'ui_featured.png' %>" alt="Amazon Featured Deals" /></a>
+  <% end %>
   <a href="/hotdeals"><img src="<%=asset_path 'ui_sale.png' %>" alt="Amazon Sale" /></a>
   <a href="/promocodes"><img src="<%=asset_path 'ui_code.png' %>" alt="Amazon Coupon" /></a>
   <a href="https://amzn.to/2Q8uWyX"><img src="<%=asset_path 'ui_dotd.png' %>" alt="Deal Of The Day" /></a>
